--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
 baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+languageCode = "en-gb"
+title = "Linux Training"
+theme = "workshop-materials"
