--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,8 @@ baseURL = "http://example.org/"
 languageCode = "en-gb"
 title = "Linux Training"
 theme = "workshop-materials"
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
