--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://example.org/linux-training"
 languageCode = "en-gb"
 title = "Linux Training"
 theme = "workshop-materials"
