--- a/themes/workshop-materials/theme.toml
+++ b/themes/workshop-materials/theme.toml
@@ -5,7 +5,7 @@ name = "Workshop Materials"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
 description = ""
-homepage = "http://example.com/"
+homepage = "http://example.com/linux-training"
 tags = []
 features = []
 min_version = "0.41"
